# PCOT

./: 404.html  ARCH.md  CITATION.cff  Doxyfile  EVAL.md  ISSUES  LICENCE  NotesMeeting2201  README.md  TESTS.md  channelsource.py  conntypes.py  createCondaEnv  createCondaEnv.bat  defaults.ini  envi.py  enviheader.py  filters  filters.py  graphscene.py  graphview.py  index.html  index.md~  inputs.md~  libtest.pcot  macros.py  main.py  notes  palette.py  pancamimage.py  poetrybuild  pyproject.toml  releases.md~  roadmap.md~  setup.cfg  sitemap.xml  xform.py
RStar_AUPE/: enviheader.py  test against exospec.pcot
assets/: main.ui  tabadd.ui  tabbinop.ui  tabconnector.ui  tabdump.ui  tabgrad.ui  tabhistogram.ui  tabinset.ui  tabmacro.ui  tabmultifile.ui  taboffset.ui  tabpainted.ui  tabrect.ui  tabsource.ui  tabspectrum.ui
autodocs/: index.html
autodocs/PCT_Patch_Detection/: index.html
autodocs/assignfilters/: index.html
autodocs/banddepth/: index.html
autodocs/batchinputs/: index.html
autodocs/batchoutputs/: index.html
autodocs/circle/: index.html
autodocs/colorchecker/: index.html
autodocs/colourmap/: index.html
autodocs/comment/: index.html
autodocs/constant/: index.html
autodocs/contrast_stretch/: index.html
autodocs/croproi/: index.html
autodocs/crosscalib/: index.html
autodocs/curve/: index.html
autodocs/decorr_stretch/: index.html
autodocs/dqmod/: index.html
autodocs/dummy/: index.html
autodocs/dump/: index.html
autodocs/edge/: index.html
autodocs/errortest/: index.html
autodocs/example/: index.html
cameras/: README.md  aupe.parc  aupeL_nocalib.parc  aupeR_nocalib.parc  aupe_old.parc  convert_from_csv.py  gencam.py  pancam.parc  test.parc  training1.parc  training2.parc
classdiag/: classdiag.py  uml.uml
devguide/: classes.md~  index.html  index.md~  library.md~  operators.md~  plugins.md.orig  plugins.md~  release_procedure.md~  types.md~  values.md~
docktabtest/: README.md  main.py  tab1.py  tab1.ui  tab2.ui  tab3.py  tabs.py
docs/: app.xcf  customisation.tex  image.plantuml  inputs.plantuml  install.tex  intro.tex  macros.plantuml  main.tex  model.tex  plantuml  rgb.plantuml  roi.plantuml  source.plantuml  ui.plantuml  writingfuncs.tex  writingnodes.tex  xform.plantuml
docsite/: config.toml  go.mod  runOnVM
exampleData/: README.md
exampleplugins/: save_envi.py
examples/: anaglyph.json
expressions/: eval.py  parse.py  tests.py
gettingstarted/: concepts.md~  connectors.md~  genbrushes.py~  index.html  inputs.md~  installrun.md~  tutorial.md~
github/: index.html
graph/: ARCH.md  ISSUES  canvas.py  createCondaEnv  graphscene.py  graphview.py  main.py  main.ui  notes  palette.py  tabcontrast.ui  tabimage.ui  tabs.py  tabsink.ui  tabsource.ui  tabsplit.ui  xform.py  xformhist.py  xformimage.py  xformmerge.py  xformsink.py  xformsource.py  xformsplit.py
inputs/: envi.py  inp.py  inputmethod.py  inputs.py  multifile.py  nullinput.py  rgb.py
internalDocs/: build  deploy  mkdocs.yml  run  runOnHecateVM  theme
libexamples/: 1.hdr  1.pcot  1.py  showfilters.py  slice.py  spectra.py
mkdocs/: alert.py  build  deploy  deployToPale  generate_autodocs.py  genhelp.py  lightbox.py  mkdocs.yml  run  runOnHecateVM  show_autodoc_state.py
operations/: __init__.py  curve.py  norm.py
pcotplugins/: README.md  example1.py  save_envi.py  testfuncs.py
pyInstaller/: dir.spec  file.spec  linux_note  macos.spec  macos_note  main.spec  notes  splash.xcf  windows_note
releases/: index.html
roadmap/: index.html
search/: search_index.json
src/: test.py
testlister/: build  latex.py  main.tex  mark.py  md2latex.py  processor.py  reflection.py  testlister.py
tests/: datumarchive.py  findnodeintests  fixtures.py  gen_envi.py  pds4data.py  test_datumarchive.py  test_datumstore.py  test_taggedaggs.py  unaryfunctests.py  unc_fixtures.py
testuncs/: add.py  div.py  mul.py  pow.py  q  test.py  testspeed.py
ui/: __init__.py  canvas.py  gradient.py  graphscene.py  graphview.py  help.py  inputs.py  mainwindow.py  mplwidget.py  namedialog.py  number.py  tabs.py  variantwidget.py
userguide/: cameradata.md~  canvas.md~  expr.md~  index.html  index.md~  multifile.md~  principles.md~  update.md~
utils/: archive.py  binop.py  colour.py  deb.py  ops.py  text.py
xforms/: TESTING.py  tabimage.py  xformadd.py  xformbinop.py  xformcalib.py  xformcombine.py  xformconstant.py  xformcontrast.py  xformcrop.py  xformcurve.py  xformdecorr.py  xformdisplayval.py  xformdummy.py  xformdump.py  xformellipse.py  xformellipsedetect.py  xformeval.py  xformfreehand.py  xformgrad.py  xformgrey.py  xformhist.py  xformhistequal.py  xforminput.py  xforminset.py  xformmacro.py  xformmerge.py  xformmultifile.py  xformnorm.py  xformnumber.py  xformoffset.py  xformpoly.py  xformrect.py  xformrgbfile.py  xformsink.py  xformsource.py  xformspectrum.py  xformsplit.py
(+567 files in other folders)
