[tool.poetry]
name = "pcot"
version = "0.1.0-alpha"
description = "PanCam Operations Toolkit"
authors = ["Jim Finnis <jcf12@aber.ac.uk>"]
license = "MIT"
repository = "https://github.com/AU-ExoMars/PCOT"
keywords = ["calibration", "processing", "image", "research"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/AU-ExoMars/PCOT/issues"

[tool.poetry.dependencies]
python = "=3.8"
PyQt5 = "^5.15.6"
opencv-python-headless = "4.5.3.56"
scikit-image = "^0.18.3"
numpy = "1.21.5"		# numpy 1.22 not currently compatible with pyinstaller
matplotlib = "^3.5.0"
pyperclip = "^1.8.2"
pds4-tools = "^1.2"
markdown = "^3.3.6"
pymdown-extensions = ">=9.1"
proctools = { path = "./dist/proctools", develop = true }


# Future:
#passthrough = "0.3.2"
#proctools = "0.1.1"
#proctools = { path = "../proctools", develop = true }

[tool.poetry.dev-dependencies]
pytest = ">=3.5"
black = "^20.8b1"
isort = "^5.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pcot = 'pcot.main:main'

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | build
    | dist
  )/
)
'''
experimental-string-processing = true


[tool.isort] # black compatibility
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
