[project]
name = "pcot"
version = "0.11.0-alpha"
description = "PanCam Operations Toolkit"
authors = [{ name = "Jim Finnis", email = "jcf12@aber.ac.uk" }]
requires-python = "==3.9.24"
license = "MIT"
keywords = [
    "calibration",
    "processing",
    "image",
    "research",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "PySide2==5.15.2",
    "opencv-python-headless",
    "scikit-image>=0.21.0,<0.22",
    "numpy>=1.21.5,<2",
    "matplotlib>=3.5.0,<4",
    "pyperclip>=1.8.2,<2",
    "pds4-tools~=1.2",
    "markdown>=3.3.6,<4",
    "mkdocs>=1.2.3,<2",
    "pymdown-extensions>=9.1",
    "proctools>=0.2.1,<0.3",
]

[project.urls]
Repository = "https://github.com/AU-ExoMars/PCOT"
"Bug Tracker" = "https://github.com/AU-ExoMars/PCOT/issues"

[project.scripts]
pcot = "pcot.main:main"
pcotbatch = "pcot.batch:main"

[dependency-groups]
dev = [
    "pytest>=3.5",
    "black~=20.8b1",
    "isort>=5.8.0,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_functions = "test_"
minversion = "6.0"
testpaths = [
    "tests",
]

# these warnings are for datumfuncs which Pytest thinks are tests.
filterwarnings = [
    "ignore:cannot collect 'testimg' because it is not a function",
    "ignore:cannot collect 'testfunc1' because it is not a function",
    "ignore:cannot collect 'testfunc2' because it is not a function"
]

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | build
    | dist
  )/
)
'''
experimental-string-processing = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

