[metadata]
name = pcot
version = 0.0.0
author = Jim Finnis
author_email = jcf12@aber.ac.uk
description = PanCam Operations Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AU-ExoMars/PCOT
project_urls =
    Bug Tracker = https://github.com/AU-ExoMars/PCOT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pcot = pcot.main:main

